--- a/util/BUILD
+++ b/util/BUILD
@@ -8,4 +8,9 @@ go_library(
         ["*.go"],
         exclude = ["*_test.go"],
     ),
+    deps = [
+        "//third-party-go/vendor/github.com/golang/glog:go_default_library",
+        "//third-party-go/vendor/golang.org/x/net/context:go_default_library",
+        "//third-party-go/vendor/google.golang.org/grpc:go_default_library",
+    ],
 )
